syntax = "proto3";

package common;

message Void {}

// The response message containing the greetings
message IncomingRequest {
    uint64 id = 1;
    string method = 2;
    string uri = 3;
    repeated Header headers = 4;
    bytes body = 5;
}

message OutgoingResponse {
    uint64 id = 1;
    uint32 status = 2;
    repeated Header headers = 3;
    bytes body = 4;
}

message Header {
    bytes name = 1;
    bytes value = 2;
}
