syntax = "proto3";

package inner;

import "common.proto";

service Inner {
  rpc StreamRequests(common.Void) returns (stream common.IncomingRequest) {}
  rpc SendResponse(common.OutgoingResponse) returns (common.Void) {}
}
